Bug: Make text input faster and fix cursor jumping to the end of the line, by making the text input value modification happen on the same elm runtime pass as the key press while keeping relatively minimal code duplication. Performance: reduce local storage writes and size. Feat: Add /dev page. Tweak ; Current year is now a flag so it is faster. Tweak: Ignore rust server /target in git repo

--- a/public/css/blur.css
+++ b/public/css/blur.css
@@ -295,8 +295,8 @@
 }
 
 .animate_clip_bottom {
-  animation: animateClipBottom 2s forwards;
-  -webkit-animation: animateClipBottom 2s forwards;
+  animation: animateClipBottom 1.5s forwards;
+  -webkit-animation: animateClipBottom 1.5s forwards;
 }
 
 @keyframes animateClipBottom {
@@ -327,8 +327,8 @@
 }
 
 .animate_clip_cover {
-  animation: animateClipCover 2s forwards;
-  -webkit-animation: animateClipCover 2s forwards;
+  animation: animateClipCover 1.5s forwards;
+  -webkit-animation: animateClipCover 1.5s forwards;
 }
 
 .clip_cover {
